--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -309,7 +309,7 @@ table.tbl-p{}
 
 /* Main - 차트확대보기 */
 .zoom-chart-modal{width:1024px;}
-.zoom-chart-modal .modal_cont{height:799px;}
+.zoom-chart-modal .modal_cont{height:799px;border-radius:0 0 8px 8px;}
 .zoom-chart-modal .modal_cont .legend{margin:12px 20px;}
 .zoom-chart-modal .modal_cont .chart_div{width:976px;overflow-x:auto;height:calc(100vh - 345px);}
 
@@ -333,7 +333,7 @@ table.tbl-p{}
 .p_edit_tab_cont{background:#fff;border:1px solid var(--Grayscale-100);border-radius:8px;height:339px;overflow-y:auto;padding:24px 10px;}
 .p_edit_tab_cont.scrollBar2{padding:24px 0 24px 10px;}
 
-/*tree*/
+/*tree - SC_MAIN_003-포틀릿편집 */
 .tree{position:relative;margin:0 14px;}
 .tree::before {content: '';top: 10px; width: 15px;height: calc(100% - 20px);border-left: 1px dashed #bcc2d6;position: absolute;left: 7px;z-index:110;}
 .tree .first::before{display: none;}
@@ -446,8 +446,6 @@ table.tbl-st1{border-top:1px solid var(--Grayscale-600);}
 .tbl-st1 thead th{background:var(--Grayscale-300);color:#fff;font-size:14px;font-weight:500;text-align:center;height:50px;position:relative;}
 .tbl-st1 thead th span{}
 .tbl-st1 thead th:not(:first-child)::before{content:'';display:block;width:1px;height:18px;background:#fff;position:absolute;top:16px;left:0;}
-
-
 .tbl-st1 td{background:#fff;font-size:14px;font-weight:400;text-align:center;padding:12px 8px;border-top:1px solid #fafafc;border-bottom:1px solid #D2D7E5;border-left:1px solid #D2D7E5;line-height:18px;word-break:break-all; word-wrap:break-word;height:60px;}
 .tbl-st1 td.td_left{text-align:left;}
 .tbl-st1 td.td_left>.flex{display:flex;justify-content:flex-start;align-items:flex-start;}
@@ -491,8 +489,8 @@ th.th_flex .btn_more_vert{flex-shrink:0;}
 
 .search_cont .btn_div{position:absolute;top:0;right:0;display:flex;}
 .search_cont .btn_div .btn{margin-left:10px;}
-.search_cont .btn_div .btn_list{/*background:var(--Grayscale-100) url(../images/svg/ico_download.svg) no-repeat right 16px center;padding-right:43px;border:1px solid var(--Grayscale-150);*/}
-.btn_list .ico_list{background-image:url(../images/svg/ico_download.svg);}
+.ico_list{background-image:url(../images/svg/ico_download.svg);}
+.ico_delete{background-image:url(../images/svg/ico_delete.svg);}
 
 /* Page-Modal */
 .modal.page-modal{width:1024px;max-height:calc(100vh - 136px);}
@@ -504,6 +502,13 @@ th.th_flex .btn_more_vert{flex-shrink:0;}
 .modal.page-modal2{width:1024px;/*max-height:calc(100vh - 136px);*/max-height:calc(100vh - 180px);}
 .page-modal2 .modal_cont{padding:32px 4px 32px 24px;}/*scrollBar3가 들어가서 padding값 조정*/
 .page-modal2 .tab-cont.scrollBar3{overflow-y:scroll;height:calc(100vh - 434px);scroll-behavior: smooth;}
+
+.modal.page-modal3{width:1024px;/*max-height:calc(100vh - 136px);*/max-height:calc(100vh - 180px);}
+.page-modal3 .modal_cont{padding:32px 0 0 24px;}/*scrollBar가 들어가서 padding값 조정*/
+.page-modal3 .tab-link{width:976px;}
+.page-modal3 .tab-cont{padding:32px 24px;} 
+.page-modal3 .tab-cont.scrollBar3{overflow-y:scroll;height:calc(100vh - 434px);scroll-behavior: smooth;padding:32px 4px 32px 24px;}
+.page-modal3 .modal_bottom{padding-top:24px;}
 
 .go-top{text-align:center;background:var(--Primary-Black);border-radius:4px;box-shadow: 0px 4px 4px 0px #00000040;position:fixed;bottom:0;right:-80px;width:56px;height:56px;padding-top:10px;}
 .go-top::before{content:'';display:block;width:25px;height:18px;background:url(../images/svg/arr_gotop.svg) no-repeat center center;;margin:0 auto 2px;}
@@ -715,14 +720,18 @@ table.accr-in-box{border-top:2px solid var(--Grayscale-600);border-left:1px soli
 .pay_process>li:first-child{margin-left:0;}
 .pay_process>li.current{background:#CAF0F880;border-radius:8px;}
 .pay_process>li.future .ico_arr_circle{border-color:var(--Grayscale-200);background-image:url(../images/svg/arr_process_disabled.svg);}
-.pay_process>li.future *{color:var(--Grayscale-200);}
+.pay_process>li.future *,
+.pay_process .future .pay_info p{color:var(--Grayscale-200);}
 .ico_arr_circle{display:block;background:#fff url(../images/svg/arr_process.svg) no-repeat center center;border:0.114rem solid var(--Secondary-SkyBlue);border-radius:12px;box-shadow: 0px 4px 4px 0px #00000040;width:24px;height:24px;margin:0 auto 8px;}
 .pay_process .pr_status{color:var(--Secondary-SkyBlue);margin-bottom:8px;}
 .pay_process .pay_info{border-top:1px solid var(--Grayscale-150);padding-top:8px;}
-.pay_process .pay_info p:not(".tooltip>p"){color:var(--Secondary-DeepBlue);margin-bottom:4px;}
+.pay_process .pay_info p{color:var(--Secondary-DeepBlue);margin-bottom:4px;}
 .pay_process .pay_info p>*{display:inline-block;vertical-align:middle;}
 .pay_process .pay_info p i{margin-top:2px;}
-.pay_process .pay_date{color:var(--Text-400);margin-bottom:8px;}
+.pay_process .pay_info .pay_date{color:var(--Text-400);margin-bottom:8px;}
+.pay_process .pay_info .msg_div .tooltip p{margin:0;color:#fff;}
+.pay_process .msg_div{margin-top:8px;}
+
 .ico_clock{display:inline-block;vertical-align:middle;width:24px;height:24px;background:url(../images/svg/ico_clock.svg) no-repeat center center;margin-right:4px;}
 .ico_check{display:inline-block;vertical-align:middle;width:24px;height:24px;background:url(../images/svg/ico_check.svg) no-repeat center center;margin-right:4px;}
 .ico_check_off{display:inline-block;vertical-align:middle;width:24px;height:24px;background:url(../images/svg/ico_check_off.svg) no-repeat center center;margin-right:4px;}
@@ -865,20 +874,28 @@ table.accr-in-box{border-top:2px solid var(--Grayscale-600);border-left:1px soli
 .left_title_paid::before{background-image:url(../images/svg/ico_tit_paid.svg);}
 .msg_div{position:relative;width:24px;height:24px;margin:4px auto 0;}
 .ico_message{width:24px;}
-.ico_message:hover + .tooltip{display:block;}
-.msg_div .tooltip{position:absolute;bottom:31px;z-index:15;left:-4px;width:123px;display:none;}
-
+.pay_process .ico_message:hover + .tooltip{display:block;}
+.msg-link:hover + .tooltip{display:block;}
+.pay_process .msg_div .tooltip{width:123px;}
+.msg_div .tooltip{position:absolute;bottom:31px;z-index:15;left:-4px;display:none;}
+.msg_div .tooltip-down-left{top:34px;}
 
 table.pay_table{}
-.pay_table thead th{height:68px;position:relative;}
-.pay_table thead th:not(:first-child)::before{content:'';display:block;width:1px;height:36px;background:#fff;position:absolute;top:16px;left:0;}
+thead.thead-01 th{height:68px;position:relative;}
+thead.thead-01 th:not(:first-child)::before{height:36px;}
+
+thead.thead-02 th{height:56px;position:relative;}
+thead.thead-02 th:not(:first-child)::before{height:24px;}
+tbody.tbody-02 td{height:48px;}
 
 .pay_table .payment_status{cursor: pointer;}
+.pay_table .td_status{cursor: pointer;}
 .pay_table .tr_process{display:none;}
-.pay_table .tr_process td{background:#fff;}
+.pay_table .tr_process td{background:#fff;text-align:left;}
 .pay_table .pay_process .pay_info{padding-bottom:8px;}
 .pay_table .list-layer{position:absolute;top:21px;left:12px;z-index:30;}
 
+table.pay_table tr.tr_process td{background:#fff!important;}
 .search_result_cont .pay_table tr:nth-child(2n-1) td{background:unset}
 .search_result_cont .pay_table tr td{background:#F4F5F8;}
 .search_result_cont .pay_table tr:nth-child(4n+1) td,
@@ -887,23 +904,117 @@ table.pay_table{}
 }
 table th.th_array{padding:0 8px;text-align:left;}
 th.th_array span{display:inline-block;width:calc(100% - 24px);text-align:center;}
-th.th_array .btn-array{position:absolute;top:22px;right:8px;}
+th.th_array .btn-array{position:absolute;top:50%;margin-top:-12px;right:8px;}
 .btn-array{display:inline-block;width:24px;height:24px;background:url(../images/svg/arr_drop_down.svg) no-repeat 0 0;}
 .btn-array.active{transform:rotate(180deg);}
 .circle-progress{display:flex;width:48px;height:48px;border-radius:50%;background: conic-gradient(#4c9aed var(--progress), #e6e8f0 0deg);font-size:0;margin:0 auto;}
 .circle-progress::after {content:attr(data-progress) '';display:flex;justify-content:center;flex-direction:column;width:100%;margin:7px;border-radius:50%;background: #fff;
 font-size:12px;text-align:center;}
 
-.list-layer{background:#fff;border:1px solid var(--Grayscale-200);border-radius:4px;box-shadow: 0px 8px 16px 0px #0000001A;width:264px;position:absolute;}
-.list-layer ul{padding-bottom:8px;max-height:210px;overflow-y:auto;}
-.list-layer ul li{text-align:left;}
-.list-layer ul li a{padding:12px;min-height:42px;color:var(--fontColor);width:100%;}
-.list-layer ul li a:hover{background-color:var(--Grayscale-50);}
-.list-layer ul li a.active{background:var(--Primary-Blue);color:#fff;}
-.list-layer ul li a.active>p{}
-.list-layer ul li .ico_file{margin-right:10px;}
+.pay_table .toggle-div{border-top:1px solid var(--Grayscale-150);margin-top:10px;}
+.pubilc_view_cont{display:flex;padding:16px 0 16px 16px;}
+.pubilc_view_srch{width:268px;flex-shrink:0;}
+.pubilc_view_srch .select_div{margin-bottom:10px;}
+.pubilc_view_list_result{height:237px;width:100%;overflow-y:scroll;margin-left:40px;}
+.pubilc_view_list{border-bottom:1px solid var(--Grayscale-150);height:40px;padding:8px 0;position:relative;}
+.pubilc_view_list>*{display:inline-block;vertical-align:middle;}
+.pubilc_view_list .name{color:var(--Secondary-DeepBlue);flex-shrink:0;width:180px;}
+.pubilc_view_list::before{content:'';display:inline-block;vertical-align:middle;width:24px;height:24px;margin-right:6px;}
+.pubilc_view_list.done::before{background:url(../images/svg/ico_done.svg) no-repeat center center;}
+.pubilc_view_list .team{color:var(--Secondary-DeepBlue);width:160px;}
+.pubilc_view_list .date{color:var(--Text-400);width:120px;position:absolute;top:10px;right:0;}
 
-.list-layer ul::-webkit-scrollbar { background-color: transparent;}
-.list-layer ul::-webkit-scrollbar{width:10px;height:10px;background-color: rgba(0,0,0,0%);}
-.list-layer ul::-webkit-scrollbar-thumb{background-color: #22222210;border: 2px solid transparent;background-clip: padding-box;border-radius:100px;}
-.list-layer .btn-close-layer{display:block;font-size:0;text-indent:-9999px;width:24px;height:24px;background:url(../images/svg/btn_close_layer.svg) no-repeat 0 0;position:absolute;top:4px;right:0;}
+/*tree-menu*/
+.tree-menu-wrap{background:#fff;border-radius:8px;height:350px;padding:10px;overflow-y:scroll;overflow-x:auto;margin-top:10px;}
+.tree-menu{position:relative;margin-left:14px;}
+.tree-menu::before {content: '';top:20px; width: 15px;height: calc(100% - 40px);border-left: 1px dashed #bcc2d6;position: absolute;left: 7px;z-index:110;}
+.tree-menu .first::before{display: none;}
+.tree-menu li{position: relative;}
+.tree-menu li::before,.tree-menu li::after{content:'';position: absolute;left:7px;z-index:110;}
+.tree-menu li::before{top:3px;width:16px;height: 1em;border-bottom: 1px dashed #bcc2d6;}
+.tree-menu>li::before {display:none;}
+.tree-menu>li:first-child::before{border-left: none;}
+.tree-menu li{}
+.tree-menu li .tree_list{display:inline-block;vertical-align:middle;line-height:16px;position:relative;z-index:110;width:calc(100% - 26px);height:34px;padding:5px 0;white-space:nowrap;}
+.tree-menu li .tree_list>*{display:inline-block;vertical-align:middle;margin-right:7px;position:relative;z-index:120;}
+.tree_list.hover:before,
+.tree_list.checked:before{z-index:115;}
+
+.tree-menu .no-children .tree_list{margin-left:25px;position:relative;}
+.tree_list.hover:before{content:'';height:34px;position:absolute;left:0;top:0;background:rgba(202, 240, 248, 0.25);border:1px solid rgba(76, 154, 237, 0.25);border-radius:4px;}
+.tree_list.checked:before{content:'';height:34px;position:absolute;left:0;top:0;background:rgba(202, 240, 248, 0.50);border:1px solid rgba(76, 154, 237, 0.50);border-radius:4px;}
+.tree_list.checked span{font-weight:700;color:var(--Primary-Blue);}
+.depth-1>.tree_list.hover:before,
+.depth-1>.tree_list.checked:before{left:-39px;width:calc(100% + 50px);}
+.depth-2>.tree_list.hover:before,
+.depth-2>.tree_list.checked:before{left:-55px;width:calc(100% + 66px);}
+.depth-3>.tree_list.hover:before,
+.depth-3>.tree_list.checked:before{left:-71px;width:calc(100% + 82px);}
+.depth-4>.tree_list.hover:before,
+.depth-4>.tree_list.checked:before{left:-87px;width:calc(100% + 98px);}
+.depth-5>.tree_list.hover:before,
+.depth-5>.tree_list.checked:before{left:-103px;width:calc(100% + 114px);}
+.depth-6>.tree_list.hover:before,
+.depth-6>.tree_list.checked:before{left:-119px;width:calc(100% + 130px);}
+.depth-7>.tree_list.hover:before,
+.depth-7>.tree_list.checked:before{left:-135px;width:calc(100% + 146px);}
+.depth-8>.tree_list.hover:before,
+.depth-8>.tree_list.checked:before{left:-151px;width:calc(100% + 162px);}
+
+
+.ico_tree_li{width:24px;height:24px;}
+.ico_business{background:url(../images/svg/ico_business.svg) no-repeat center center;}
+.ico_person{background:url(../images/svg/ico_person.svg) no-repeat center center;}
+.ico_team{background:url(../images/svg/ico_team.svg) no-repeat center center;}
+
+.tree_list.checked .ico_business{background:url(../images/svg/ico_business_blue.svg) no-repeat center center;}
+.tree_list.checked .ico_person{background:url(../images/svg/ico_person_blue.svg) no-repeat center center;}
+.tree_list.checked .ico_team{background:url(../images/svg/ico_team_blue.svg) no-repeat center center;}
+
+.tree-menu li.selected>span{color:#2264DC;font-weight:bold;}
+.tree-menu li ul{margin-left:16px;}
+.tree-menu .depth-2::before{left:-8px;z-index:110;width:8px;}
+.tree-menu .depth-3::before{left:-8px;z-index:110;width:12px;}
+.tree-menu .depth-4::before{left:-10px;z-index:110;width:12px;}
+.tree-menu .depth-5::before{left:-10px;z-index:110;width:12px;}
+.tree-menu .depth-6::before{left:-10px;z-index:110;width:12px;}
+.tree-menu .depth-7::before{left:-10px;z-index:110;width:12px;}
+.tree-menu .depth-8::before{left:-10px;z-index:110;width:12px;}
+
+.tree-menu .has-children:not(.depth-1)::after{content:'';top:17px;width:15px;height:calc(100% - 34px);border-left: 1px dashed #bcc2d6;position: absolute;left:6px;z-index:110;}
+.tree-menu .no-children::before{width:34px}
+
+.tree .bg_hover{display:none;width:268px;height:34px;border-radius:4px;position:absolute;top:-5px;z-index:105;cursor:move;}
+.tree .on>.bg_hover{display:block;background:rgba(202, 240, 248, 0.25);border:1px solid rgba(76, 154, 237, 0.25);}
+.tree .selected>.bg_hover{display:block;background:rgba(202, 240, 248, 0.50);border:1px solid rgba(76, 154, 237, 0.50);}
+.tree-toggle-icon{position: relative;z-index:115;display: inline-block;vertical-align: middle;width: 16px;height:16px;background:url(../images/svg/treemap_plus.svg) no-repeat 0 0;margin: 0 6px 0 0;cursor: pointer;}
+.tree-toggle-icon.open{background-image:url(../images/svg/treemap_minus.svg);}
+
+.tree-toggle-icon{position: relative;z-index:115;display: inline-block;vertical-align: middle;width: 16px;height:16px;background:url(../images/svg/treemap_plus.svg) no-repeat 0 0;margin: 0 6px 0 0;cursor: pointer;}
+.tree-toggle-icon.open{background-image:url(../images/svg/treemap_minus.svg);}
+
+.tree-menu .depth-1.on>.bg_hover,
+.tree-menu .depth-1.selected>.bg_hover{left:-15px;width:calc(100% + 20px);}
+.tree-menu .depth-2.on>.bg_hover,
+.tree-menu .depth-2.selected>.bg_hover{left:-31px;width:calc(100% + 36px);}
+.tree-menu .depth-3.on>.bg_hover,
+.tree-menu .depth-3.selected>.bg_hover{left:-47px;width:calc(100% + 52px);}
+.tree-menu .depth-4.on>.bg_hover,
+.tree-menu .depth-4.selected>.bg_hover{left:-63px;width:calc(100% + 68px);}
+.tree-menu .depth-5.on>.bg_hover,
+.tree-menu .depth-5.selected>.bg_hover{left:-79px;width:calc(100% + 84px);}
+.tree-menu .depth-6.on>.bg_hover,
+.tree-menu .depth-6.selected>.bg_hover{left:-95px;width:calc(100% + 100px);}
+.tree-menu .depth-7.on>.bg_hover,
+.tree-menu .depth-7.selected>.bg_hover{left:-111px;width:calc(100% + 116px);}
+.tree-menu .depth-8.on>.bg_hover,
+.tree-menu .depth-8.selected>.bg_hover{left:-127px;width:calc(100% + 132px);}
+
+.pay_left{width:50%;}
+.srch_organ{display:flex;}
+.pay_right{width:50%;margin-left:24px;}
+.organ_tree_menu_cont{width:100%;background:var(--Grayscale-100);border:1px solid var(--Grayscale-300);padding:16px;border-radius:8px;}
+
+.pay-list-st>li{margin-bottom:1px;}
+.pay-list-title{background:var(--Grayscale-300);text-align:center;height:52px;color:#fff;display:flex;align-items:center;justify-content:center;}
+.pay-list-cont{background:#fff;border-width:0 1px 1px 1px;border-style:solid;border-color:var(--Grayscale-200);padding:14px 12px;margin-top:1px;} 
