--- a/assets/css/common.css
+++ b/assets/css/common.css
@@ -185,6 +185,13 @@ input[type="password"]::-ms-clear {
   display: none;
 }
 
+input[type="number"]::-webkit-outer-spin-button,
+input[type="number"]::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+}
+
 /** Common **/
 .wrapper{position:relative;width:100%;height:100%;min-width:1440px;}
 .container{background:#FAFAFC;width:100%;min-width:1440px;}
@@ -509,8 +516,10 @@ textarea.textarea{width:100%;height:164px;padding:16px;overflow-y:scroll;resize:
 
 .w100{width:100%;}
 .w100 + .btn{flex-shrink:0;margin-left:10px;}
+.w100px {width:100px !important;}
 .w110px {width:110px !important;}
 .w140px {width:140px !important;}
+.w220px {width:220px !important;}
 .w240px {width:240px !important;}
 .w248px {width:248px !important;}
 .w270px {width:270px !important;}
@@ -523,6 +532,7 @@ textarea.textarea{width:100%;height:164px;padding:16px;overflow-y:scroll;resize:
 
 .mt0 {margin-top:0 !important;}
 .mt4{margin-top:4px;}
+.mt8{margin-top:8px;}
 .mt10{margin-top:10px;}
 .mt12{margin-top:12px;}
 .mt16{margin-top:16px;}
@@ -539,8 +549,10 @@ textarea.textarea{width:100%;height:164px;padding:16px;overflow-y:scroll;resize:
 
 .mb5{margin-bottom:5px;}
 .mb6{margin-bottom:6px;}
+.mb8{margin-bottom:8px;}
 .mb10{margin-bottom:10px;}
 .mb16{margin-bottom:16px;}
+.mb24{margin-bottom:24px;}
 
 .pt12{padding-top:12px;}
 
@@ -678,3 +690,12 @@ textarea.textarea{width:100%;height:164px;padding:16px;overflow-y:scroll;resize:
 .imgUploader .imgList li img:hover + .btn-del { opacity: 0.8; } 
 .imgUploader .imgList li .btn-del:hover { opacity: 0.8; } 
 .imgUploader .guideTxt span { color: #8E97B4; margin-top: 8px; display: block; } 
+
+
+/* Toast_popup */
+[id ^="toastpopup"] {height:auto; min-height:64px;}
+[id ^="toastpopup"] p {color:#fff;display: flex;flex-shrink: 1;word-break: break-all;width: 100%;}
+.toast_message .ico_fail  {background:url(../images_admin/tstmessage-warning.svg) no-repeat center center;display:inline-block;width:32px;height:32px;margin-bottom: -2px;}
+.toast_message .ico_block {background:url(../images_admin/tstmessage-block.svg) no-repeat center center;display:inline-block;width:32px;height:32px;margin-bottom: -4px;}
+
+.toast_message .btn-lock:before {color: #fff !important;background-color: #fff !important;}
